# resources-packer

./: CMakeLists.txt  ResourcesPacker.pro  dialogresource.cpp  dialogresource.h  dialogresource.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelresource.h  res.qrc  resourcesmodel.cpp  resourcesmodel.h
